--- a/com.yummy/src/main/resources/egovframework/message/message-common_ko.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common_ko.properties
@@ -40,6 +40,9 @@ star.1=1 Star
 star.2=2 Star
 star.3=3 Star
 
+mode.create=\uc2dd\ub2f9 \uc2e0\uaddc \ub4f1\ub85d
+mode.modify=\uc0c1\uc138\uc815\ubcf4
+
 
 
 # image name #
