--- a/com.yummy/src/main/resources/egovframework/message/message-common_ko.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common_ko.properties
@@ -60,9 +60,12 @@ rvw.cnt=\ud3c9\uac00\uc790 \uc218
 rvw.avg=\ub124\ud2f0\uc98c \ud3c9\uc810
 rvw.grade=\uc790\uccb4 \ud3c9\uc810
 
+
 # image name #
 image.search=btn_form_search.gif
 image.errorBg=error
+
+title.phot=\uC0AC\uC9C4
 
 # -- validator errors -- #
 fail.common.msg=\uc5d0\ub7ec\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4!
