--- a/com.yummy/src/main/resources/egovframework/message/message-common_ko.properties
+++ b/com.yummy/src/main/resources/egovframework/message/message-common_ko.properties
@@ -67,6 +67,8 @@ image.errorBg=error
 
 title.phot=\uC0AC\uC9C4
 
+title.index=\uAD00\uB9AC\uC790 \uD398\uC774\uC9C0
+
 # -- validator errors -- #
 fail.common.msg=\uc5d0\ub7ec\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4!
 fail.common.sql=sql \uc5d0\ub7ec\uac00 \ubc1c\uc0dd\ud588\uc2b5\ub2c8\ub2e4! error code: {0}, error msg: {1}
