--- a/APP_EX/app/src/main/res/values/strings.xml
+++ b/APP_EX/app/src/main/res/values/strings.xml
@@ -47,5 +47,5 @@
     <string name="starKey">미슐랭 별점</string>
     <string name="telKey">전화 번호</string>
 
-    <string name="filter">조건 보기</string>
+    <string name="filter">가격대 별로 보기</string>
 </resources>
