--- a/APP_EX/app/src/main/res/values/strings.xml
+++ b/APP_EX/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="nullCont">내용을 작성 해 주세요.</string>
     <string name="nullPhot">사진은 필수입니다.</string>
 
-    <string name="starKey">미슐랭 별점</string>
+    <string name="starKey">미슐랭 평가</string>
     <string name="telKey">전화 번호</string>
 
     <string name="filter">가격대 별로 보기</string>
