--- a/APP_EX/app/src/main/res/values/strings.xml
+++ b/APP_EX/app/src/main/res/values/strings.xml
@@ -51,6 +51,6 @@
 
     <string name="toCreateRvw">후기 보기</string>
     <string name="rst_nm">RST_NM</string>
-    <string name="author">작성자</string>
-    <string name="cdt">작성일</string>
+    <string name="author">작성자 : </string>
+    <string name="cdt">작성일 : </string>
 </resources>
