--- a/APP_EX/app/src/main/res/values/strings.xml
+++ b/APP_EX/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="rst_nm">RST_NM</string>
     <string name="author">작성자 : </string>
     <string name="cdt">작성일 : </string>
+
+    <string name="show_menu">메뉴 보기</string>
 </resources>
